[gd_scene load_steps=3 format=3 uid="uid://wdc7bc23k150"]

[ext_resource type="Script" path="res://bubble.gd" id="1_slgsi"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wd14d"]

[node name="Bubble" type="Node2D"]
script = ExtResource("1_slgsi")
size = 3
speed = 150
positive_color = Color(0.913725, 0.913725, 0, 1)
negtive_color = Color(0.45098, 0.0627451, 0.254902, 1)
chain_color = Color(0, 0.72549, 0, 1)

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_wd14d")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
